# stablecoin

./: Anchor.toml  Cargo.toml  package-lock.json  package.json  rust-toolchain.toml
patches/proc-macro2/src/: wrapper.rs
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: lib.rs  pyth_config.rs
programs/stablecoin/src/instructions/: mod.rs  utils.rs
programs/stablecoin/src/instructions/admin/: initialize_config.rs  mod.rs  update_config.rs
programs/stablecoin/src/instructions/deposit/: deposit_collateral_and_mint_tokens.rs  mod.rs
programs/stablecoin/src/instructions/withdraw/: liquidate.rs  mod.rs  redeem_collateral_and_burn_tokens.rs
tests/: stablecoin.ts
